# NN-inference-edge

./: .gitignore  Android.mk  Application.mk  CMakeLists.txt  Makefile  README.md  overclock
app/jni/: Android.mk  Application.mk  Makefile
app/jni/examples/: main_sign_draw.cpp  main_sign_fps.cpp  main_sign_lane_draw.cpp
app/jni/src/: lane_detection.cpp  lane_detection.hpp  log_stream.cpp  obj_detection.hpp  platform_snpe.cpp  platform_snpe.hpp  postprocess.hpp  postprocess_fcos.cpp  postprocess_fcos.hpp  postprocess_unet.cpp  postprocess_unet.hpp  sign_detection.cpp  sign_detection.hpp
configs/: bisenet.json  bisenet_mobilenet.json  espnet.json  espnetv2.json  espnetv2fusion.json  kevin_prune_test.json  mnasneta1fcos.json  mnasneta1fcos_caffe.json  mobilenetv2ssd.json  mobilenetv2unet.json  nie-mobilenetssd.json  rgp_mobilessd.json  rgpnet.json  signlane.json  uninet.json
examples/: bisenet-fp32.cpp  bisenet-uint8.cpp  bisenet.cpp  combine.cpp  create-engine.cpp  espnet-async.cpp  espnet-async2.cpp  espnet.cpp  espnetv2-uint8.cpp  espnetv2fusion_trt_debug.cpp  espnetv2fusion_trt_fps.cpp  list-device.cpp  main-build-nnapi-fp32.cpp  main-build-nnapi-quant.cpp  main-build-nnapi-uint8.cpp  main-build-nnapi.cpp  main-create-engine.cpp  main-engine-fps.cpp  main-multiple.cpp  main-nnapi-simple-example.cpp  main-nnapi.cpp  main-parse-onnx.cpp  main-run.cpp  main-separate.cpp  main-test-engine-fps.cpp  main_lane_draw.cpp  main_ppmp_save.cpp  main_sign.cpp  main_sign_draw.cpp  main_sign_fps.cpp  maindebug.cpp  mnasneta1fcos_caffe_debug.cpp  mnasneta1fcos_caffe_fps.cpp  mnasneta1fcos_debug.cpp  mnasneta1fcos_fps.cpp  mnasneta1fcos_trt_debug.cpp  mnasneta1fcos_trt_fps.cpp  mobilenetssd-fp32.cpp  mobilenetssd-ncnn-andorid.cpp  mobilenetssd-uint8.cpp  (+15 more)
libraries/spdlog/include/spdlog/fmt/bundled/: format.h
python/: VIRB0695_07758.json  convert-caffe.py  convert-onnx.py  dataset.txt  espnetv2_segfcos.caffemodel  espnetv2_segfcos.param  espnetv2_segfcos.prototxt  espnetv2fusion.onnx  espnetv2fusion_optimized.onnx  main-espnetsegfcos.py  main-mnasnetfcos.py  main-onnx-edit.py  main.py  mnasneta1fcos.prototxt  run.py  training.json
python/caffescripts/: AttentionLayer.py  BaseBlock.py  EspNetV2Fusion.py  FillWeight.py  MnasNetA1FCOS.py  __init__.py  abc.prototxt  foo.py
python/pytorchscripts/: __init__.py  espnetv2.py  espnetv2_fusion.py  fcos.py  fcos_detection.py  l2norm.py  layer_factory.py  mnasnet.py  mnasnet_fcos.py  mobilenetv2.py  seg.py  shape.py  utils.py
src/: log_stream.cpp  log_stream.hpp  postprocess_fcos.cpp  postprocess_fcos.hpp  postprocess_unet.hpp  reshape.cpp  resize_bilinear.h  resize_bilinear_kernel.h  resize_nearest.cpp  resize_nearest.h  resize_plugin.h  trt_common.h  utils.cpp  utils.hpp
src/napi/: builder.cpp  builder.hpp
src/nie/: argmax.cpp  argmax.h  argmax_kernel.cu  argmax_kernel.h  common.h  reshape.cpp  reshape.h  resize_bilinear.cpp  resize_bilinear.h  resize_bilinear_kernel.cu  resize_bilinear_kernel.h  resize_nearest.cpp  resize_nearest.h  resize_nearest_kernel.cu  resize_nearest_kernel.h  resize_plugin.cpp  resize_plugin.h
src/nnapi/: simplemodel.h
src/nv/: buffers.hpp  run_model.cpp  run_model.hpp
src/onnx/: onnx.proto3.pb.cpp  onnx.proto3.pb.h
src/trt/: argmax.cpp  argmax.h  argmax_kernel.cu  argmax_kernel.h  reshape.h  resize_bilinear.cpp  resize_bilinear_kernel.cu  resize_nearest_kernel.cu  resize_nearest_kernel.h  resize_plugin.cpp  trt_buffers.h  trt_common.h
